themes/matery/source/css/matery.css
/* ... */
#articleContent video {
    display: block;
    margin: 30px auto;
    box-shadow: 0 5px 35px 0 rgba(0,0,0,.2), 0 10px 35px -11px rgba(0,0,0,.6);
    cursor: pointer;
}

#articleContent ol,
#articleContent ul {
    display: block;
    padding-left: 2em !important;
    word-spacing: 0.05rem;
}

#articleContent ul li,
#articleContent ol li {
    display: list-item;
    line-height: 1.8rem;
    font-size: 1rem;
}

#articleContent ul li {
    list-style-type: disc;
}

#articleContent ul ul li {
    list-style-type: circle;
}

#articleContent table, th, td {
    padding: 12px 13px;
    border: 1px solid #dfe2e5;
}

table tr:nth-child(2n), thead {
    background-color: #fafafa;
}

#articleContent table th {
    background-color: #f2f2f2;
    min-width: 80px;
}

#articleContent table td {
    min-width: 80px;
}

#articleContent [type="checkbox"]:not(:checked), [type="checkbox"]:checked {
    position: inherit;
    margin-left: -1.3rem;
    margin-right: 0.4rem;
    margin-top: -1px;
    vertical-align: middle;
    left: unset;
    visibility: visible;
}

#article-share .social-share {
    text-align: center;
    margin: 30px 0;
}

@media only screen and (min-width: 600px) {
    #article-share .social-share a {
        margin-right: 15px !important;
    }
}

.chip-container {
    margin-top: -60px;
}

.chip-container .tag-title {
    margin-bottom: 10px;
    color: #3C4858;
    font-size: 1.75rem;
    font-weight: 400;
}

.chip-container .tag-chips {
    margin: 1rem auto 0.5rem;
    max-width: 850px;
    text-align: center;
}

.chip-container .tags-posts {
    margin-top: 20px;
}

.chip-container .chip-default {
    color: #34495e;
}

.chip-container .chip-active {
    color: #FFF !important;
    background: linear-gradient(to bottom right, #FF5E3A 0%, #FF2A68 100%) !important;
    box-shadow: 2px 5px 10px #aaa !important;
}

.chip-container .chip {
    margin: 10px 10px;
    padding: 0 14px;
    display: inline-block;
    height: 38px;
    min-width: 80px;
    line-height: 39px;
    font-size: 1rem;
    font-weight: 500;
    border-radius: 5px;
    word-wrap: break-word;
    cursor: pointer;
    box-shadow: 0 3px 5px rgba(0, 0, 0, .12);
}

.chip-container .chip:hover {
    color: #fff;
    background: linear-gradient(to right, #4cbf30 0%, #0f9d58 100%) !important;
}

.chip .tag-length {
    margin-left: 5px;
    margin-right: -2px;
    font-size: 0.5rem;
}

.chip-default .tag-length {
    color: #e91e63;
}

.chip-active .tag-length {
    color: #fff;
}

/* archive page. */
#cd-timeline .year {
    position: relative;
    width: 80px;
    height: 80px;
    margin: 10px 0 50px -20px;
    padding: 21px 10px;
    background-color: #ff5722;
    color: #fff;
    font-size: 1.8rem;
    font-weight: 600;
}

#cd-timeline .year a {
    color: #fff;
}

#cd-timeline .month {
    position: relative;
    width: 60px;
    height: 60px;
    margin: 10px 0 30px -10px;
    padding: 14px 16px;
    background-color: #ef6c00;
    color: #fff;
    font-size: 1.7rem;
    font-weight: 600;
}

#cd-timeline .month a {
    color: #fff;
}

#cd-timeline .day {
    position: relative;
    padding: 8px 10px;
    background-color: #ffa726;
    color: #fff;
    font-size: 1.2rem;
    font-weight: 500;
}

#cd-timeline {
    /*width: 90%;*/
    max-width: 820px;
    position: relative;
    margin-top: 2rem;
    margin-bottom: 2rem;
}

#cd-timeline::before {
    /* this is the vertical line */
    content: '';
    position: absolute;
    top: 0;
    left: 18px;
    height: 100%;
    width: 4px;
    background: #0f9d58;
}

@media only screen and (min-width: 900px) {
    #cd-timeline {
        margin-top: 2rem;
        margin-bottom: 2rem;
    }

    #cd-timeline::before {
        left: 50%;
        margin-left: -2px;
    }

    #cd-timeline .year {
        margin: 10px 0 50px -40px;
        padding: 22px 11px;
    }

    #cd-timeline .month {
        margin: 10px 0 30px -30px;
        padding: 14px 16px;
    }
}

.cd-timeline-block {
    position: relative;
    margin: 1em 0;
}

.cd-timeline-block::after {
    clear: both;
    content: "";
    display: table;
}

.cd-timeline-block:first-child {
    margin-top: 0;
}

.cd-timeline-block:last-child {
    margin-bottom: 0;
}

@media only screen and (min-width: 870px) {
    .cd-timeline-block {
        margin: 1em 0;
    }

    .cd-timeline-block:first-child {
        margin-top: 0;
    }

    .cd-timeline-block:last-child {
        margin-bottom: 0;
    }
}

.cd-timeline-img {
    position: absolute;
    top: 0;
    left: 0;
    width: 40px;
    height: 40px;
    border-radius: 50%;
    box-shadow: 0 0 0 4px #ffffff, inset 0 2px 0 rgba(0, 0, 0, 0.08), 0 3px 0 4px rgba(0, 0, 0, 0.05);
}

@media only screen and (min-width: 900px) {
    .cd-timeline-img {
        width: 40px;
        height: 40px;
        left: 50%;
        margin-left: -20px;
        /* Force Hardware Acceleration in WebKit */
        -webkit-transform: translateZ(0);
        -webkit-backface-visibility: hidden;
    }

    .cssanimations .cd-timeline-img.is-hidden {
        visibility: hidden;
    }

    .cssanimations .cd-timeline-img.bounce-in {
        visibility: visible;
        -webkit-animation: cd-bounce-1 0.6s;
        -moz-animation: cd-bounce-1 0.6s;
        animation: cd-bounce-1 0.6s;
    }
}

.cd-timeline-content {
    position: relative;
    margin-top: -40px;
    margin-left: 60px;
    padding: 0;
    border-radius: 5px;
    background: #ffffff;
    box-shadow: 0 15px 35px rgba(50, 50, 93, .1), 0 5px 15px rgba(0, 0, 0, .07) !important;
}

.cd-timeline-content::after {
    clear: both;
    content: "";
    display: table;
}

.cd-timeline-content .card {
    margin: 0;
}

.cd-timeline-content::before {
    content: '';
    position: absolute;
    top: 18px !important;
    right: 100%;
    height: 0;
    width: 14px;
    margin-left: 2px;
    margin-right: 2px;
    border: 1px dashed #ffa726;
}
/* ... */

